--- a/julia/problem_046.ipynb
+++ b/julia/problem_046.ipynb
@@ -5,37 +5,62 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 46\n",
+    "# Problem 46\n",
     "https://projecteuler.net/problem=46"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "43bdfe49",
+   "id": "f4aaec09",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Julia v1.11.1\n"
+     ]
+    }
+   ],
    "source": [
-    "using Primes, BenchmarkTools\n",
-    "include(\"./euler.jl\");"
+    "println(\"Julia v\", string(VERSION))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "43bdfe49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using BenchmarkTools"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "818b36ed",
+   "metadata": {},
+   "source": [
+    "### Solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ad3966c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using Primes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "6665944a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "square_numbers (generic function with 2 methods)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "function square_numbers(high, low=1)\n",
     "    \"\"\"\n",
@@ -50,25 +75,19 @@
     "        n += 1\n",
     "    end\n",
     "    return squares\n",
-    "end"
+    "end\n",
+    "\n",
+    "@assert square_numbers(25) == [1, 4, 9, 16, 25]\n",
+    "@assert square_numbers(25, 9) == [9, 16, 25]\n",
+    "@assert square_numbers(25, 10) == [16, 25]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "0d5962ce",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "is_goldbach (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "function is_goldbach(n)\n",
     "    \"\"\"\n",
@@ -82,15 +101,51 @@
     "    else\n",
     "        return false\n",
     "    end\n",
+    "end\n",
+    "\n",
+    "@assert is_goldbach(7)\n",
+    "@assert !is_goldbach(8)\n",
+    "@assert is_goldbach(9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "5f496982",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "solution (generic function with 2 methods)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "function solution(n=3)\n",
+    "    while is_goldbach(n) || isprime(n)\n",
+    "        n += 2 # odds only\n",
+    "    end\n",
+    "    return n\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "33b39ffc",
+   "execution_count": 7,
+   "id": "46be4c73",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  562.166 μs (15487 allocations: 3.21 MiB)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -102,62 +157,33 @@
     }
    ],
    "source": [
-    "n = 3 # starting point\n",
-    "while is_goldbach(n) || isprime(n)\n",
-    "    n += 2 # odds only\n",
-    "end\n",
-    "n"
+    "@btime solution()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "c1c7a120",
+   "cell_type": "markdown",
+   "id": "bddc032d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "BenchmarkTools.Trial: 7301 samples with 1 evaluation.\n",
-       " Range \u001b[90m(\u001b[39m\u001b[36m\u001b[1mmin\u001b[22m\u001b[39m … \u001b[35mmax\u001b[39m\u001b[90m):  \u001b[39m\u001b[36m\u001b[1m561.000 μs\u001b[22m\u001b[39m … \u001b[35m  3.046 ms\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmin … max\u001b[90m): \u001b[39m 0.00% … 79.59%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[34m\u001b[1mmedian\u001b[22m\u001b[39m\u001b[90m):     \u001b[39m\u001b[34m\u001b[1m579.291 μs               \u001b[22m\u001b[39m\u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmedian\u001b[90m):    \u001b[39m 0.00%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[32m\u001b[1mmean\u001b[22m\u001b[39m ± \u001b[32mσ\u001b[39m\u001b[90m):   \u001b[39m\u001b[32m\u001b[1m681.370 μs\u001b[22m\u001b[39m ± \u001b[32m225.187 μs\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmean ± σ\u001b[90m):  \u001b[39m14.38% ± 18.35%\n",
-       "\n",
-       "  \u001b[39m█\u001b[39m█\u001b[34m▆\u001b[39m\u001b[39m▅\u001b[39m▄\u001b[39m▂\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[32m \u001b[39m\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m▂\u001b[39m▃\u001b[39m▃\u001b[39m▂\u001b[39m▁\u001b[39m▁\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m▂\u001b[39m▂\u001b[39m▃\u001b[39m▃\u001b[39m▂\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m▂\n",
-       "  \u001b[39m█\u001b[39m█\u001b[34m█\u001b[39m\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m▇\u001b[39m▇\u001b[39m▇\u001b[32m▇\u001b[39m\u001b[39m▆\u001b[39m▅\u001b[39m▆\u001b[39m▃\u001b[39m▄\u001b[39m▅\u001b[39m▁\u001b[39m▅\u001b[39m▄\u001b[39m▁\u001b[39m▃\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▃\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▃\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m▇\u001b[39m▇\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m▇\u001b[39m \u001b[39m█\n",
-       "  561 μs\u001b[90m        \u001b[39m\u001b[90mHistogram: \u001b[39m\u001b[90m\u001b[1mlog(\u001b[22m\u001b[39m\u001b[90mfrequency\u001b[39m\u001b[90m\u001b[1m)\u001b[22m\u001b[39m\u001b[90m by time\u001b[39m       1.26 ms \u001b[0m\u001b[1m<\u001b[22m\n",
-       "\n",
-       " Memory estimate\u001b[90m: \u001b[39m\u001b[33m3.21 MiB\u001b[39m, allocs estimate\u001b[90m: \u001b[39m\u001b[33m15487\u001b[39m."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "b = @benchmark begin\n",
-    "    n = 3 # starting point\n",
-    "    while is_goldbach(n) || isprime(n)\n",
-    "        n += 2 # odds only\n",
-    "    end\n",
-    "    n\n",
-    "end"
+    "### Save benchmark"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "cba7c066",
+   "execution_count": 8,
+   "id": "a97141ef",
    "metadata": {},
    "outputs": [],
    "source": [
-    "euler.save_benchmark(46, b);"
+    "include(\"./euler.jl\")\n",
+    "bm = @benchmark solution()\n",
+    "euler.save_benchmark(46, bm);"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0",
+   "display_name": "Julia 1.11.1",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -165,7 +191,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0"
+   "version": "1.11.1"
   }
  },
  "nbformat": 4,
